# ensemble

./: .env.example  .gitignore  Makefile  README.md  WORKFLOWS.md  biome.json  package-lock.json  package.json  tsconfig.json
cli/: index.ts
cli/utils/: contracts.ts  types.ts  viem.ts
context/: ens.md  ens_node.md
ens-agent/: README.md
ens-agent-api/: .gitignore  package-lock.json  package.json  tsconfig.json  wrangler.toml
ens-agent-api/src/: index.ts
ens-agent-api/src/lib/: abi.ts  avatar.ts  calldata.ts  config.ts  duration.ts  ensip5.ts  ensnode.ts  node.ts  reads.ts
ens-agent-api/src/routes/: check.ts  commit.ts  list.ts  primary.ts  profile.ts  records.ts  register.ts  renew.ts  resolve.ts  subname.ts  transfer.ts  utils.ts  verify.ts
ens-agent/backend/: .gitignore  pyproject.toml  requirements.txt  test_all_tools.py
ens-agent/backend/app/: agent.py  main.py  server.py  widgets.py
ens-agent/backend/app/tools/: __init__.py  helpers.py  reads.py  writes.py
ens-agent/design-system/: chatkit-theme.ts  globals.css  package.json  tailwind-preset.js  theme.css
ens-agent/frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
examples/grails-integration/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: bootstrap.sh
skills/dev/: SKILL.md
skills/ens-register/: SKILL.md
skills/ens-resolve/: SKILL.md
skills/ens-validate/: SKILL.md
skills/lint-format/: SKILL.md
skills/release-prep/: SKILL.md
src/commands/: index.ts
src/config/: deployments.ts
src/utils/: index.ts
(+37 files in other folders)
